[package]
name = "stats-exporter"
version = "0.1.0"
authors = ["bloque94 by Fernando Seoane <fseoane@hotmail.com>"]
edition = "2021"

[[bin]]
name = "stats-exporter"
path ="src/main.rs"

[dependencies]
toml = "0.8.8"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1.0.113"
log = "0.4.20"
sysinfo="0.30.7"
#axum = {version = "0.6.20", features = ["headers"]}
axum = {version ="0.7.4", features = ["tokio","json"]}
tokio = { version = "1.0", features = ["full"] }

